--- a/styles.css
+++ b/styles.css
@@ -66,14 +66,25 @@ nav li a.active {
 #hero {
     background-color: bisque;
     height: 500px;
+    position: relative;
 }
 
 .column {
     float: left;
     height: 500px;
+    position: absolute;
+
+}
+
+.column img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover; 
 }
 
 .text {
+    float: right;
+    margin: 10% 10% 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -82,7 +93,7 @@ nav li a.active {
 }
 
 .text h2 {
-    padding: 20px 10rem;
+    padding: 20px 15rem;
 }
 
 .text p {
@@ -92,4 +103,19 @@ nav li a.active {
 .btn {
     
     padding: 5px 20px;
+}
+
+.social-icons {
+    display: flex;
+    gap: 10px;
+}
+
+.social-icons img {
+    width: 24px; /* Adjust size as needed */
+    height: auto;
+    transition: opacity 0.3s;
+}
+
+.social-icons img:hover {
+    opacity: 0.7;
 }
