--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,28 @@ nav li a.active {
 }
 
 .btn {
-    
     padding: 5px 20px;
+}
+
+label[for="password"]
+{
+    bottom: 200px;
+}
+::placeholder{
+    color: transparent;
+}
+.my-style::placeholder{
+    color: #a5a5a5;
+}
+button{
+    width: 300px;
+    position: absolute;
+    bottom: 75px;
+    padding: 15px 0;
+    background-color: #2ebf75;
+    color: #ffffff;
+    border-radius: 5px ;
+    cursor: pointer;
 }
 
 .social-icons {
