--- a/styles.css
+++ b/styles.css
@@ -140,4 +140,59 @@ button{
     transform: scale(1.2);
     transition: all 0.2s ease;
 }
-
+form {
+    background-color: #b0ad7d;
+    height: 450px;
+    width: 400px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 8px;
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.35);
+    padding: 30px 50px;
+}
+form h1 {
+    text-align: center;
+    font-size: 23px;
+    color: #fff;
+}
+form * {
+    border: none;
+    outline: none;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+input{
+    display: block;
+    height: 2px;
+    width: 300px;
+    position: absolute;
+    background-color: #4d4d4d;
+    color: #ffffff;
+    padding: 0 15px;
+    font-weight: 300;
+    border-radius: 5px;
+    transition: 0.5s all;
+}
+label{
+    display: inline-block;
+    color: #e5e5e5;
+    cursor: pointer;
+    font-size: 12px;
+    position: absolute;
+    transition: 0.5s all;
+}
+label[for="username"]{
+    bottom: 310px;
+}
+#username{
+    bottom: 305px;
+}
+#password{
+    bottom: 195px;
+    }
