--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ button{
     position: absolute;
     bottom: 75px;
     padding: 15px 0;
-    background-color: #2ebf75;
+    background-color: #ab7b57;
     color: #ffffff;
     border-radius: 5px ;
     cursor: pointer;
@@ -141,7 +141,7 @@ button{
     transition: all 0.2s ease;
 }
 form {
-    background-color: #b0ad7d;
+    background-color: #d9c6bd;
     height: 450px;
     width: 400px;
     position: absolute;
@@ -157,7 +157,7 @@ form {
 form h1 {
     text-align: center;
     font-size: 23px;
-    color: #fff;
+    color: #0a0000;
 }
 form * {
     border: none;
@@ -173,7 +173,7 @@ input{
     width: 300px;
     position: absolute;
     background-color: #4d4d4d;
-    color: #ffffff;
+    color: #0a0303;
     padding: 0 15px;
     font-weight: 300;
     border-radius: 5px;
@@ -181,7 +181,7 @@ input{
 }
 label{
     display: inline-block;
-    color: #e5e5e5;
+    color: #f5f3f2;
     cursor: pointer;
     font-size: 12px;
     position: absolute;
