--- a/styles.css
+++ b/styles.css
@@ -233,3 +233,35 @@ label[for="username"]{
 #password{
     bottom: 195px;
 }
+
+.contact-details {
+    padding: 20px;
+    margin: 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #ddd;
+    text-align: center;
+    height: 60vh;
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    i {
+      font-size: 18px;
+      margin-right: 10px;
+      color: #666;
+    }
+    a {
+      text-decoration: none;
+      color: #337ab7;
+    }
+    a:hover {
+      color: #23527c;
+    }
+    address {
+      font-style: normal;
+    }
+}
